# OpenGL_3D_Game

./: .gitignore  BuildRun.sh  CMakeLists.txt  OpenGL_3D_Game.code-workspace  README.md  config.text  game_config.txt  install_dep_windows.bat  install_deps_linux.sh  main.cpp  world.save
include/: camera.hpp  cube.hpp  filemanager.hpp  gameManager.hpp  glad.h  helper.hpp  inventory.hpp  item.hpp  mesh.hpp  model.hpp  mycore.hpp  myglwindow.hpp  mywindowmanager.hpp  physics.hpp  player.hpp  rendermanager.hpp  shader.hpp  shader_m.hpp  shadersource.hpp  stb_image.hpp  world.hpp  worldData.hpp  worldManager.hpp  worldgenerator_a.hpp
include/glad/: glad.c
include/shaders/: fragment.shader  vertex.shader
src/: cube.cpp  examplewindow.cpp  examplewindow.hpp  filemanager.cpp  inventory.cpp  main.cpp  mycore.cpp  mywindowmanager.cpp  physics.cpp  world.cpp
src/game/: gameManager.cpp  player.cpp
src/game/inventory/: inventory.cpp  inventory.hpp  inventorymanager.cpp  inventorymanager.hpp
src/game/inventory/items/: item.cpp
src/game/world/: world.cpp  world.hpp  worldGenerator.cpp  worldManager.cpp
src/game/world/generator/: worldgenerator_a.cpp  worldgenerator_a.hpp
src/gl/3d/: cube.cpp  rendermanager.cpp
src/gl/window/: GLwindow.cpp  myglwindow.cpp
